{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 50,
  "lineage": "b16504c4-655e-352f-3bc6-28d69e314af9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "stockbit-vpc-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.0.12",
            "domain": "vpc",
            "id": "eipalloc-0f9cad458a450f222",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-52-77-88-43.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.77.88.43",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:090413721679:internet-gateway/igw-0d86373b2d696240b",
            "id": "igw-0d86373b2d696240b",
            "owner_id": "090413721679",
            "tags": {
              "Name": "IGW Stockbit"
            },
            "vpc_id": "vpc-0547f686734e97284"
          },
          "dependencies": [
            "aws_vpc.stockbit-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw-stockbit",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f9cad458a450f222",
            "id": "nat-0893f988f35313dac",
            "network_interface_id": "eni-0afe925c4fac22a53",
            "private_ip": "10.0.1.245",
            "public_ip": "52.77.88.43",
            "subnet_id": "subnet-0110486b35f24244d",
            "tags": {
              "Name": "GW NAT"
            }
          },
          "dependencies": [
            "aws_eip.stockbit-vpc-nat",
            "aws_subnet.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01a0ddec526f65684",
            "owner_id": "090413721679",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d86373b2d696240b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0547f686734e97284"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.stockbit-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:090413721679:security-group/sg-0ed1aa670c254d825",
            "description": "Allow all inbound ssh traffic ",
            "egress": [],
            "id": "sg-0ed1aa670c254d825",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_all_ssh",
            "name_prefix": "",
            "owner_id": "090413721679",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-f539c993"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:090413721679:subnet/subnet-0110486b35f24244d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0110486b35f24244d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "090413721679",
            "tags": {
              "Name": "Private PVC"
            },
            "vpc_id": "vpc-0547f686734e97284"
          },
          "dependencies": [
            "aws_vpc.stockbit-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:090413721679:subnet/subnet-0e17122992b08e1bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0e17122992b08e1bf",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "090413721679",
            "tags": {
              "Name": "public vpc"
            },
            "vpc_id": "vpc-0547f686734e97284"
          },
          "dependencies": [
            "aws_vpc.stockbit-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "stockbit-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:090413721679:vpc/vpc-0547f686734e97284",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06e994b9e5097681a",
            "default_route_table_id": "rtb-09a8087bc23266446",
            "default_security_group_id": "sg-0fb0f3278d8f72e3d",
            "dhcp_options_id": "dopt-78608b1e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0547f686734e97284",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09a8087bc23266446",
            "owner_id": "090413721679",
            "tags": {
              "Name": "Stockbit VPC"
            }
          }
        }
      ]
    }
  ]
}